Changed naming, fixed spacing.

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -11486,7 +11486,7 @@ p {
 }
 /*# sourceMappingURL=style.css.map */
 
-.social-icon {
+.share-icon {
   width: 2rem;
   height: 2rem;
 }
